about page added

--- a/c-compiler.html
+++ b/c-compiler.html
@@ -152,7 +152,7 @@
       font-size: .9rem;
       padding: .75rem 1rem;
       overflow: auto;
-      
+
     }
 
     .io-area pre {
@@ -171,8 +171,6 @@
     .accordion-wrapper .card-header button {
       color: #54a8c7;
     }
-
-
   </style>
 </head>
 
@@ -199,7 +197,7 @@
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item dropdown"><a class="nav-link active" href="c-compiler.html">Compiler</a></li>
                 <li class="nav-item dropdown"><a class="nav-link" href="converter.html">Converter</a></li>
-                <li class="nav-item dropdown dropdown-mega"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item dropdown"><a class="nav-link" href="about.html">About</a></li>
               </ul>
             </div>
           </div>
@@ -208,8 +206,8 @@
               <li class="nav-item"><a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-search"><i
                     class="uil uil-search"></i></a></li>
               <li class="nav-item hidden xl:block lg:block md:block">
-                <a class='btn btn-sm btn-aqua text-white !bg-[#54a8c7] hover:!text-white hover:bg-[#54a8c7] hover:!border-[#54a8c7] focus:shadow-[rgba(79,152,181,1)] active:!text-[#343f52] active:bg-[#54a8c7] active:border-[#54a8c7] disabled:!text-[#343f52] disabled:bg-[#54a8c7] disabled:border-[#54a8c7] !text-[.85rem] !rounded-[.4rem] hover:translate-y-[-0.15rem] hover:shadow-[0_0.25rem_0.75rem_rgba(30,34,40,0.15)]' target="_blank" 
-   rel="noopener noreferrer"
+                <a class='btn btn-sm btn-aqua text-white !bg-[#54a8c7] hover:!text-white hover:bg-[#54a8c7] hover:!border-[#54a8c7] focus:shadow-[rgba(79,152,181,1)] active:!text-[#343f52] active:bg-[#54a8c7] active:border-[#54a8c7] disabled:!text-[#343f52] disabled:bg-[#54a8c7] disabled:border-[#54a8c7] !text-[.85rem] !rounded-[.4rem] hover:translate-y-[-0.15rem] hover:shadow-[0_0.25rem_0.75rem_rgba(30,34,40,0.15)]'
+                  target="_blank" rel="noopener noreferrer"
                   href='https://github.com/abdeyrabby404/Compiler-X-project'>Code on GitHub</a>
               </li>
               <li class="nav-item xl:!hidden lg:!hidden"><button
@@ -327,8 +325,10 @@
           class="md:w-4/12 xl:w-3/12 lg:w-3/12 w-full flex-[0_0_auto] !px-[15px] max-w-full xl:!mt-0 lg:!mt-0 !mt-[30px]">
           <div class="widget !text-[#cacaca]">
             <h4 class="widget-title !text-white !mb-3 !text-[1rem] !leading-[1.45]">Get in Touch</h4>
-            <address class="xl:!pr-20 xxl:!pr-28 not-italic !leading-[inherit] block !mb-4">Bank Colony Street, Savar, Dhaka, Bangladesh</address>
-            <a class="!text-[#cacaca] hover:!text-[#54a8c7]" href="mailto:first.last@email.com">abdeyrabby404@gmail.com</a><br>
+            <address class="xl:!pr-20 xxl:!pr-28 not-italic !leading-[inherit] block !mb-4">Bank Colony Street, Savar,
+              Dhaka, Bangladesh</address>
+            <a class="!text-[#cacaca] hover:!text-[#54a8c7]"
+              href="mailto:first.last@email.com">abdeyrabby404@gmail.com</a><br>
             +88 01648926381
           </div>
           <!-- /.widget -->
@@ -359,7 +359,7 @@
               <!-- Begin Mailchimp Signup Form -->
               <div id="mc_embed_signup2">
                 <form
-                  action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a"
+                  action=""
                   method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form"
                   class="validate dark-fields" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll2">
