--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="CompilerX is a modern online C Compiler, Converter, and Handbook — all in one place. Write, compile, and run C programs instantly in your browser without installing anything. Enjoy fast performance, code saving, custom input, syntax highlighting, and downloadable outputs. The built-in Converter helps solve common Compiler Design course problems like left recursion elimination, left factoring, and parsing table construction. The included Handbook guides learners step-by-step through C programming and compiler design concepts.">
+  <!-- <meta name="description"
+    content="CompilerX is a modern online C Compiler, Converter, and Handbook — all in one place. Write, compile, and run C programs instantly in your browser without installing anything. Enjoy fast performance, code saving, custom input, syntax highlighting, and downloadable outputs. The built-in Converter helps solve common Compiler Design course problems like left recursion elimination, left factoring, and parsing table construction. The included Handbook guides learners step-by-step through C programming and compiler design concepts."> -->
   <meta name="keywords"
     content="Tailwind CSS, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup,">
   <meta name="author" content="elemis">
@@ -67,12 +67,7 @@
                 <li class="nav-item dropdown"><a class="nav-link active" href="index.html">Home</a></li>
                 <li class="nav-item dropdown"><a class="nav-link " href="c-compiler.html">Compiler</a></li>
                 <li class="nav-item dropdown"><a class="nav-link" href="converter.html">Converter</a></li>
-                <li class="nav-item dropdown dropdown-mega">
-                  <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#" data-bs-toggle="dropdown">About</a>
-
-                  <!--/.dropdown-menu -->
-                </li>
-
+                <li class="nav-item dropdown"><a class="nav-link" href="about.html">About</a></li>
               </ul>
               <!-- /.navbar-nav -->
 
@@ -646,7 +641,7 @@
               <!-- Begin Mailchimp Signup Form -->
               <div id="mc_embed_signup2">
                 <form
-                  action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a"
+                  action=""
                   method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form"
                   class="validate dark-fields" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll2">
