--- a/converter.html
+++ b/converter.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Converter — CompilerX</title>
 
-  <!-- Use your existing theme + assets so navbar/footer match -->
   <link rel="shortcut icon" href="assets/img/favicon.png" />
   <link rel="stylesheet" type="text/css" href="assets/fonts/unicons/unicons.css">
   <link rel="stylesheet" href="assets/css/plugins.css" />
@@ -241,11 +240,7 @@
                 <li class="nav-item dropdown"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item dropdown"><a class="nav-link " href="c-compiler.html">Compiler</a></li>
                 <li class="nav-item dropdown"><a class="nav-link active" href="converter.html">Converter</a></li>
-                <li class="nav-item dropdown dropdown-mega">
-                  <a class="nav-link !text-[.85rem] !tracking-[normal]" href="#" data-bs-toggle="dropdown">About</a>
-
-                  <!--/.dropdown-menu -->
-                </li>
+                <li class="nav-item dropdown"><a class="nav-link" href="about.html">About</a></li>
 
               </ul>
               <!-- /.navbar-nav -->
@@ -458,7 +453,7 @@
               <!-- Begin Mailchimp Signup Form -->
               <div id="mc_embed_signup2">
                 <form
-                  action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a"
+                  action=""
                   method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form"
                   class="validate dark-fields" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll2">
